Fixes line break on top container

--- a/revclient/src/views/Browse/Top/Top.scss
+++ b/revclient/src/views/Browse/Top/Top.scss
@@ -1,7 +1,7 @@
 .topContainer {
     width: 100%;
     margin-top: 100px;
-    letter-spacing: 0.16rem;
+    letter-spacing: 0.15rem;
     font-weight: 500;
     @media #{$mobile} {
       display: none;
@@ -29,7 +29,7 @@
         width: 98%;
         @media #{$tablet} {
             flex-direction:column;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
         }
         
         .interests-left{
